--- a/home.html
+++ b/home.html
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title> Woobsite cuz y not </title>
+  </head>
+  <body>
+    <p> WEEEEEEEEEEEEEEEEEEEEEEE </p>
+    <h1> Lol why am i a human? </h1>
+  </body>
 </html>
